crates/compiler/src/tests/e2e/good/0232_fn_classify_match/main.gom
fn classify(x: int32) -> string {
    match x {
        -1 => "minus one",
        0 => "zero",
        1 => "one",
        _ => "other",
    }
}

fn main() {
    println(classify(-1));
    println(classify(0));
    println(classify(1));
    println(classify(42));
}
