crates/compiler/src/tests/e2e/bad/0011_match_arm_type_mismatch/main.gom
fn describe(n: int32) -> string {
  match n {
    0 => "zero",
    1 => 1,
    _ => "other",
  }
}

fn main() -> unit {
  let _ = describe(0);
  ()
}
